nav bar done - about doing

--- a/index.html
+++ b/index.html
@@ -5,11 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahadou | Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/c4c0df9b23.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+
+    <div class="container">
+        <header class="nav-bar">
+            <div class="nav-bar-left">
+                <div class="name">
+                    <p>Mahadou</p>
+                </div>
+            </div>
+
+            <div class="nav-bar-right">
+                <div class="nav-features"><p>Home</p></div>
+                <div class="nav-features"><p>About</p></div>
+                <div class="nav-features"><p>Experience</p></div>
+                <div class="nav-features"><p>Skills</p></div>
+                <div class="nav-features"><p>Portfolio</p></div>
+                <div class="nav-features"><p>Contact me</p></div>
+                <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
+            </div>
+        </header>
+
+        <main class="main">
+            <div class="about">
+                <div class="about-left">
+                    <div class="abt-left-media">
+                        <p class="medias">
+                            <a href="https://www.linkedin.com/in/mamadou-krouma/">
+                                <i class="fa-brands fa-linkedin-in fa-lg"></i>
+                            </a>
+                        </p>
+                        <p class="medias">
+                            <a href="https://github.com/MKrouma">
+                                <i class="fa-brands fa-github fa-lg"></i>
+                            </a>
+                        </p>
+                        <p class="medias">
+                            <a href="https://www.spatialnode.net/mahadou">
+                                <i class="fa-solid fa-browser fa-lg"></i>
+                            </a>  
+                        </p>
+                    </div>
+                    <div class="abt-left-presentation"></div>
+                </div>
+
+                <div class="about-right"></div>
+            </div>
+        </main>
+
+    </div>
+
 </body>
 </html>
