about - left done

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             </div>
 
             <div class="nav-bar-right">
-                <div class="nav-features"><p>Home</p></div>
-                <div class="nav-features"><p>About</p></div>
-                <div class="nav-features"><p>Experience</p></div>
-                <div class="nav-features"><p>Skills</p></div>
-                <div class="nav-features"><p>Portfolio</p></div>
-                <div class="nav-features"><p>Contact me</p></div>
+                <div class="nav-features"><a href="">Home</a></div>
+                <div class="nav-features"><a href="">About</a></div>
+                <div class="nav-features"><a href="">Experience</a></div>
+                <div class="nav-features"><a href="">Skills</a></div>
+                <div class="nav-features"><a href="">Portfolio</a></div>
+                <div class="nav-features"><a href="">Contact me</a></div>
                 <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
             </div>
         </header>
@@ -45,11 +45,22 @@
                         </p>
                         <p class="medias">
                             <a href="https://www.spatialnode.net/mahadou">
-                                <i class="fa-solid fa-browser fa-lg"></i>
+                                <i class="fa-solid fa-cloud fa-lg"></i>
                             </a>  
                         </p>
                     </div>
-                    <div class="abt-left-presentation"></div>
+                    <div class="abt-left-presentation">
+                        <div><h1>Hi, I'm Mamadou K.</h1></div>
+                        <div><p class="job-position">Geospatial Data Engineer</p></div>
+                        <div>
+                            <p class="job-description">Junior level experience in earth observation sience. 
+                                I anticipate on new technologies in the geospatial world what I call modern GIS in practise
+                            </p>
+                        </div>
+                        <div>
+                            <button class="abt-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></i></button>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="about-right"></div>
