about done - scroll down

--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
                     </div>
                 </div>
 
-                <div class="about-right"></div>
+                <div class="about-right">
+                    <div class="abt-r-person-img">
+                        <img class="image1" src="assets/img/blob.svg" alt="blob">
+                        <!-- <img class="image2" src="assets/img/perfil.png" alt="perfil"> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="scroll-down">
+                <div class="sd-empty"></div>
+                <div class="sd-scroll">
+                    <div><i class="fa-light fa-down"></i></div>
+                    <div><p>Scroll down</p></div>
+                    <div><i class="fa-solid fa-down"></i></div>
+                </div>
             </div>
         </main>
 
