--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="nav-bar-right">
-                <div class="nav-features"><a href="">Home</a></div>
+                <div class="nav-features" id="home-init"><a href="">Home</a></div>
                 <div class="nav-features"><a href="">About</a></div>
                 <div class="nav-features"><a href="">Experience</a></div>
                 <div class="nav-features"><a href="">Skills</a></div>
@@ -30,9 +30,9 @@
         </header>
 
         <main class="main">
-            <div class="about">
-                <div class="about-left">
-                    <div class="abt-left-media">
+            <section class="home">
+                <div class="home-left">
+                    <div class="hm-left-media">
                         <p class="medias">
                             <a href="https://www.linkedin.com/in/mamadou-krouma/">
                                 <i class="fa-brands fa-linkedin-in fa-lg"></i>
@@ -49,7 +49,7 @@
                             </a>  
                         </p>
                     </div>
-                    <div class="abt-left-presentation">
+                    <div class="hm-left-presentation">
                         <div><h1>Hi, I'm Mamadou K.</h1></div>
                         <div><p class="job-position">Geospatial Data Engineer</p></div>
                         <div>
@@ -58,27 +58,43 @@
                             </p>
                         </div>
                         <div>
-                            <button class="abt-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></i></button>
+                            <button class="hm-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></i></button>
                         </div>
                     </div>
                 </div>
 
-                <div class="about-right">
-                    <div class="abt-r-person-img">
+                <div class="home-right">
+                    <div class="hm-r-person-img">
                         <img class="image1" src="assets/img/blob.svg" alt="blob">
                         <!-- <img class="image2" src="assets/img/perfil.png" alt="perfil"> -->
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <div class="scroll-down">
+            <section class="scroll-down">
                 <div class="sd-empty"></div>
                 <div class="sd-scroll">
-                    <div><i class="fa-light fa-down"></i></div>
+                    <div><i class="fa-solid fa-scroll"></i></div>
                     <div><p>Scroll down</p></div>
-                    <div><i class="fa-solid fa-down"></i></div>
+                    <div><i class="fa-solid fa-down-long"></i></div>
                 </div>
-            </div>
+            </section>
+
+            <section class="about">
+                <div class="about-up">
+                    <div class="abt-up-title">
+                        <h2>About Me</h2>
+                        <p>My introduction</p>
+                    </div>
+                </div>
+
+                <div class="about-down">
+                    <div class="abt-down-left">
+                        <img src="assets/img/about.jpg" alt="about">
+                    </div>
+                    <div class="abt-down-right"></div>
+                </div>
+            </section>
         </main>
 
     </div>
