--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="nav-bar-right">
                 <div class="nav-features" id="home-init"><a href="">Home</a></div>
-                <div class="nav-features"><a href="">About</a></div>
+                <div class="nav-features"><a href="#about-hyperlink">About</a></div>
                 <div class="nav-features"><a href="">Experience</a></div>
                 <div class="nav-features"><a href="">Skills</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
@@ -83,7 +83,7 @@
             <section class="about">
                 <div class="about-up">
                     <div class="abt-up-title">
-                        <h2>About Me</h2>
+                        <h2><a href="" id="about-hyperlink">About Me</a></h2>
                         <p>My introduction</p>
                     </div>
                 </div>
@@ -92,7 +92,37 @@
                     <div class="abt-down-left">
                         <img src="assets/img/about.jpg" alt="about">
                     </div>
-                    <div class="abt-down-right"></div>
+                    <div class="abt-down-right">
+                        <div class="abt-dr-1">
+                            <p class="job-position">
+                                With this solid foundation in science, mathematics, I was able to discover and 
+                                acquire solid skills in areas such as Data Science, AI, Data Enginneering, 
+                                Web Development, Cloud Computing.This is <strong>Modern GIS</strong> !
+                            </p>
+                        </div>
+                        <div class="abt-dr-2">
+                            <div class="abtdr2-left">
+                                <div class="abtdr2-l-numbers">
+                                    <p class="number">02+</p>
+                                    <p class="number-description">Years experience</p>
+                                </div>
+                                <div class="abtdr2-l-numbers">
+                                    <p class="number">05+</p>
+                                    <p class="number-description">Completed side-projects</p>
+                                </div>
+                                <div class="abtdr2-l-numbers">
+                                    <p class="number">10+</p>
+                                    <p class="number-description">Compagnies projects</p>
+                                </div>
+                            </div>
+                            <div class="abtdr2-right">
+                                <a href=""><i class="fa-sharp fa-solid fa-up-long fa-xl"></i></a>
+                            </div>
+                        </div>
+                        <div class="abt-dr-3">
+                            <button class="abt-btn-download"><p>Download CV</p><i class="fa-solid fa-download"></i></button>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
