--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@
                             </div>
                         </div>
                         <div class="abt-dr-3">
-                            <button class="abt-btn-download"><p>Download CV</p><i class="fa-solid fa-download"></i></button>
+                            <button class="abt-btn-download">
+                                <a href="./assets/pdfs/resume.pdf" download="resume-MK">Download CV</a>
+                                <i class="fa-solid fa-download"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
