section skills - done

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="nav-bar-right">
                 <div class="nav-features" id="home-init"><a href="">Home</a></div>
                 <div class="nav-features"><a href="#about-hyperlink">About</a></div>
-                <div class="nav-features"><a href="">Experience</a></div>
-                <div class="nav-features"><a href="">Skills</a></div>
+                <div class="nav-features"><a href="#skills-hyperlink">Skills</a></div>
+                <div class="nav-features"><a href="">Qualification</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
                 <div class="nav-features"><a href="">Contact me</a></div>
                 <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
@@ -116,7 +116,9 @@
                                 </div>
                             </div>
                             <div class="abtdr2-right">
-                                <a href=""><i class="fa-sharp fa-solid fa-up-long fa-xl"></i></a>
+                                <div>
+                                    <a href=""><i class="fa-sharp fa-solid fa-up-long"></i></a>
+                                </div>   
                             </div>
                         </div>
                         <div class="abt-dr-3">
@@ -126,6 +128,205 @@
                             </button>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section class="skills">
+                <div class="skills-up">
+                    <div class="abt-up-title">
+                        <h2><a href="" id="skills-hyperlink">Skills</a></h2>
+                        <p>My technical level</p>
+                    </div>
+                </div>
+
+                <div class="skills-down">
+                    <div class="sk-d-frames">
+                        <div class="frames-title">
+                            <div class="frames-title-icon">
+                                <i class="fa-sharp fa-solid fa-earth-americas fa-lg"></i>
+                            </div>
+                            <div class="frames-title-description">
+                                <div class="ft-des-left">
+                                    <h3 class="ft-title">Earth Observation</h3>
+                                    <p class="ft-years">More than 2 years</p>
+                                </div>
+                                <div class="ft-des-right">
+                                    <i class="fa-sharp fa-solid fa-chevron-up fa-sm"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frames-skills">
+                            <div class="frames-skills-empty"></div>
+                            <div class="frames-skills-enums">
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>GIS</div>
+                                        <div>75%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-GIS"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Remote sensing</div>
+                                        <div>78%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-RS"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>SAR</div>
+                                        <div>65%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-SAR"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Forestery/Agriculture</div>
+                                        <div>55%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-FA"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sk-d-frames">
+                        <div class="frames-title">
+                            <div class="frames-title-icon">
+                                <i class="fa-sharp fa-solid fa-database fa-lg"></i>
+                            </div>
+                            <div class="frames-title-description">
+                                <div class="ft-des-left">
+                                    <h3 class="ft-title">Data science/engineering</h3>
+                                    <p class="ft-years">One year</p>
+                                </div>
+                                <div class="ft-des-right">
+                                    <i class="fa-sharp fa-solid fa-chevron-up fa-sm"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frames-skills">
+                            <div class="frames-skills-empty"></div>
+                            <div class="frames-skills-enums">
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Machine learning</div>
+                                        <div>80%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-ML"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Analytics</div>
+                                        <div>77%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-A"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Database modeling</div>
+                                        <div>85%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-DM"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Cloud storage/processing</div>
+                                        <div>78%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-CSP"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sk-d-frames">
+                        <div class="frames-title">
+                            <div class="frames-title-icon">
+                                <i class="fa-sharp fa-solid fa-code fa-lg"></i>
+                            </div>
+                            <div class="frames-title-description">
+                                <div class="ft-des-left">
+                                    <h3 class="ft-title">Web development</h3>
+                                    <p class="ft-years">Six months</p>
+                                </div>
+                                <div class="ft-des-right">
+                                    <i class="fa-sharp fa-solid fa-chevron-up fa-sm"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frames-skills">
+                            <div class="frames-skills-empty"></div>
+                            <div class="frames-skills-enums">
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Frontend (Basics)</div>
+                                        <div>60%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-FE"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Backend (Python)</div>
+                                        <div>75%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-BP"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>API development</div>
+                                        <div>70%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-AD"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </section>
         </main>
