--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <section class="scroll-down">
                 <div class="sd-empty"></div>
                 <div class="sd-scroll">
-                    <div><i class="fa-solid fa-scroll"></i></div>
+                    <div><i class="fa-solid fa-computer-mouse"></i></i></div>
                     <div><p>Scroll down</p></div>
                     <div><i class="fa-solid fa-down-long"></i></div>
                 </div>
@@ -161,7 +161,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>GIS</div>
-                                        <div>75%</div>
+                                        <div>82%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -172,7 +172,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>Remote sensing</div>
-                                        <div>78%</div>
+                                        <div>80%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -183,7 +183,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>SAR</div>
-                                        <div>65%</div>
+                                        <div>70%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -238,7 +238,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>Analytics</div>
-                                        <div>77%</div>
+                                        <div>85%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -248,23 +248,23 @@
                                 </div>
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
-                                        <div>Database modeling</div>
-                                        <div>85%</div>
+                                        <div>Deep Learning</div>
+                                        <div>65%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
-                                            <div class="pg pg-bar-DM"></div>
+                                            <div class="pg pg-bar-DP"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
-                                        <div>Cloud storage/processing</div>
-                                        <div>78%</div>
+                                        <div>ML Engineering</div>
+                                        <div>70%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
-                                            <div class="pg pg-bar-CSP"></div>
+                                            <div class="pg pg-bar-MLE"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -323,11 +323,34 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>CI/CD</div>
+                                        <div>20%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-CICD"></div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     
                 </div>
+            </section>
+
+            <section class="qualification">
+                <div class="quali-up">
+                    <div class="abt-up-title">
+                        <h2><a href="" id="skills-hyperlink">Qualification</a></h2>
+                        <p>My education & works</p>
+                    </div>
+                </div>
+
+                <div class="quali-down"></div>
+
             </section>
         </main>
 
