qualification session - work to do

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="nav-features" id="home-init"><a href="">Home</a></div>
                 <div class="nav-features"><a href="#about-hyperlink">About</a></div>
                 <div class="nav-features"><a href="#skills-hyperlink">Skills</a></div>
-                <div class="nav-features"><a href="">Qualification</a></div>
+                <div class="nav-features"><a href="#quali-hyperlink">Qualification</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
                 <div class="nav-features"><a href="">Contact me</a></div>
                 <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
@@ -54,7 +54,7 @@
                         <div><p class="job-position">Geospatial Data Engineer</p></div>
                         <div>
                             <p class="job-description">Junior level experience in earth observation sience. 
-                                I anticipate on new technologies in the geospatial world what I call modern GIS in practise
+                                I anticipate on new technologies in the geospatial world what I call modern GIS in practise.
                             </p>
                         </div>
                         <div>
@@ -76,14 +76,14 @@
                 <div class="sd-scroll">
                     <div><i class="fa-solid fa-computer-mouse"></i></i></div>
                     <div><p>Scroll down</p></div>
-                    <div><i class="fa-solid fa-down-long"></i></div>
+                    <div><i class="fa-solid fa-arrow-down"></i></div>
                 </div>
             </section>
 
-            <section class="about">
+            <section class="about" id="about-hyperlink">
                 <div class="about-up">
                     <div class="abt-up-title">
-                        <h2><a href="" id="about-hyperlink">About Me</a></h2>
+                        <h2><a href="">About Me</a></h2>
                         <p>My introduction</p>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="abtdr2-right">
                                 <div>
-                                    <a href=""><i class="fa-sharp fa-solid fa-up-long"></i></a>
+                                    <a href=""><i class="fa-solid fa-arrow-up"></i></a>
                                 </div>   
                             </div>
                         </div>
@@ -131,10 +131,10 @@
                 </div>
             </section>
 
-            <section class="skills">
+            <section class="skills" id="skills-hyperlink">
                 <div class="skills-up">
                     <div class="abt-up-title">
-                        <h2><a href="" id="skills-hyperlink">Skills</a></h2>
+                        <h2><a href="">Skills</a></h2>
                         <p>My technical level</p>
                     </div>
                 </div>
@@ -341,15 +341,41 @@
                 </div>
             </section>
 
-            <section class="qualification">
+            <section class="qualification" id="quali-hyperlink">
                 <div class="quali-up">
                     <div class="abt-up-title">
-                        <h2><a href="" id="skills-hyperlink">Qualification</a></h2>
+                        <h2><a href="">Qualification</a></h2>
                         <p>My education & works</p>
                     </div>
                 </div>
 
-                <div class="quali-down"></div>
+                <div class="quali-down">
+                    <div class="q-d-title">
+                        <div class="q-d-t-type">
+                            <i class="fa-solid fa-graduation-cap fa-xl"></i>
+                            <h3>Education</h3>
+                        </div>
+                        <div class="q-d-t-type">
+                            <i class="fa-solid fa-briefcase fa-xl"></i>
+                            <h3>Work</h3>
+                        </div>
+                    </div>
+                    <div class="q-d-description">
+                        <div class="qdd-text qdd-text-l">
+                            <p class="qdd-text-title">Mastère spécialisé PPMD</p>
+                            <p class="qdd-text-school">Ecole Nationale des Sciences Geographiques</p>
+                            <p class="qdd-text-period"><i class="fa-regular fa-calendar"></i>2019-2020</p>
+                        </div>
+                        <div class="qdd-text qdd-text-r"></div>
+                        <div class="qdd-text qdd-text-l"></div>
+                        <div class="qdd-text qdd-text-r">
+                            <p class="qdd-text-title">Ingénieur Géomètre-T.</p>
+                            <p class="qdd-text-school">Insitut National Polytechnique Félix Houphouet Boigny</p>
+                            <p class="qdd-text-period"><i class="fa-regular fa-calendar"></i>2014-2019</p>
+                        </div>
+                    </div>
+
+                </div>
 
             </section>
         </main>
