--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </p>
                         <p class="medias">
                             <a href="https://www.spatialnode.net/mahadou">
-                                <i class="fa-solid fa-cloud fa-lg"></i>
+                                <i class="fa-regular fa-map fa-lg"></i>
                             </a>  
                         </p>
                     </div>
@@ -143,7 +143,7 @@
                     <div class="sk-d-frames">
                         <div class="frames-title">
                             <div class="frames-title-icon">
-                                <i class="fa-sharp fa-solid fa-earth-americas fa-lg"></i>
+                                <i class="fa-solid fa-earth-africa fa-lg"></i></i>
                             </div>
                             <div class="frames-title-description">
                                 <div class="ft-des-left">
@@ -351,11 +351,11 @@
 
                 <div class="quali-down">
                     <div class="q-d-title">
-                        <div class="q-d-t-type">
+                        <div class="q-d-t-type education">
                             <i class="fa-solid fa-graduation-cap fa-xl"></i>
                             <h3>Education</h3>
                         </div>
-                        <div class="q-d-t-type">
+                        <div class="q-d-t-type work">
                             <i class="fa-solid fa-briefcase fa-xl"></i>
                             <h3>Work</h3>
                         </div>
