--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="nav-features"><a href="#skills-hyperlink">Skills</a></div>
                 <div class="nav-features"><a href="#quali-hyperlink">Qualification</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
-                <div class="nav-features"><a href="">Contact me</a></div>
+                <div class="nav-features"><a href="#contactme-hyperlink">Contact me</a></div>
                 <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
             </div>
         </header>
@@ -58,7 +58,7 @@
                             </p>
                         </div>
                         <div>
-                            <button class="hm-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></i></button>
+                            <button class="hm-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></button>
                         </div>
                     </div>
                 </div>
@@ -80,17 +80,17 @@
                 </div>
             </section>
 
-            <section class="about" id="about-hyperlink">
+            <section class="about">
                 <div class="about-up">
                     <div class="abt-up-title">
-                        <h2><a href="">About Me</a></h2>
+                        <h2><a href="" id="about-hyperlink">About Me</a></h2>
                         <p>My introduction</p>
                     </div>
                 </div>
 
                 <div class="about-down">
                     <div class="abt-down-left">
-                        <img src="assets/img/about.jpg" alt="about">
+                        <img src="assets/img/about-me-image.jpg" alt="about">
                     </div>
                     <div class="abt-down-right">
                         <div class="abt-dr-1">
@@ -131,10 +131,10 @@
                 </div>
             </section>
 
-            <section class="skills" id="skills-hyperlink">
+            <section class="skills">
                 <div class="skills-up">
                     <div class="abt-up-title">
-                        <h2><a href="">Skills</a></h2>
+                        <h2><a href="" id="skills-hyperlink">Skills</a></h2>
                         <p>My technical level</p>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                             </div>
                             <div class="frames-title-description">
                                 <div class="ft-des-left">
-                                    <h3 class="ft-title">Data science/engineering</h3>
+                                    <h3 class="ft-title">Data science</h3>
                                     <p class="ft-years">One year</p>
                                 </div>
                                 <div class="ft-des-right">
@@ -260,7 +260,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>ML Engineering</div>
-                                        <div>70%</div>
+                                        <div>60%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -292,8 +292,8 @@
                             <div class="frames-skills-enums">
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
-                                        <div>Frontend (Basics)</div>
-                                        <div>60%</div>
+                                        <div>Frontend</div>
+                                        <div>50%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -304,7 +304,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>Backend (Python)</div>
-                                        <div>75%</div>
+                                        <div>65%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -315,7 +315,7 @@
                                 <div class="frames-skills-enum">
                                     <div class="f-s-e-up">
                                         <div>API development</div>
-                                        <div>70%</div>
+                                        <div>60%</div>
                                     </div>
                                     <div class="f-s-e-down">
                                         <div class="progress-bar">
@@ -337,12 +337,77 @@
                             </div>
                         </div>
                     </div>
-                    
+
+                    <div class="sk-d-frames">
+                        <div class="frames-title">
+                            <div class="frames-title-icon">
+                                <i class="fa-sharp fa-solid fa-database fa-lg"></i>
+                            </div>
+                            <div class="frames-title-description">
+                                <div class="ft-des-left">
+                                    <h3 class="ft-title">Data Engineering</h3>
+                                    <p class="ft-years">Eight months</p>
+                                </div>
+                                <div class="ft-des-right">
+                                    <i class="fa-sharp fa-solid fa-chevron-up fa-sm"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frames-skills">
+                            <div class="frames-skills-empty"></div>
+                            <div class="frames-skills-enums">
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Database Management</div>
+                                        <div>70%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-DM"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Cloud storage/processing</div>
+                                        <div>65%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-CSP"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Processing batch/stream</div>
+                                        <div>55%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-PBS"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="frames-skills-enum">
+                                    <div class="f-s-e-up">
+                                        <div>Orchestation</div>
+                                        <div>30%</div>
+                                    </div>
+                                    <div class="f-s-e-down">
+                                        <div class="progress-bar">
+                                            <div class="pg pg-bar-O"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>     
                 </div>
             </section>
 
-            <section class="qualification" id="quali-hyperlink">
-                <div class="quali-up">
+            <section class="qualification">
+                <div class="quali-up" id="quali-hyperlink">
                     <div class="abt-up-title">
                         <h2><a href="">Qualification</a></h2>
                         <p>My education & works</p>
@@ -378,9 +443,95 @@
                 </div>
 
             </section>
-        </main>
 
+            <section class="contactme" id="contactme-hyperlink">
+                <div class="cm-up">
+                    <div class="abt-up-title">
+                        <h2><a href="" id="quali-hyperlink">Contact Me</a></h2>
+                        <p>Keep in touch</p>
+                    </div>
+                </div>
+
+                <div class="cm-down">
+                    <div class="cm-down-left">
+                        <div class="cm-d-l-features">
+                            <div class="cm-d-l-feature-icon">
+                                <i class="fa-solid fa-phone fa-lg"></i>
+                            </div>
+                            <div class="cm-d-l-feature-text">
+                                <h3 class="call-me">Call Me</h3>
+                                <p class="phone-number">+225 XXXXXXXXXX</p>
+                            </div>
+                        </div>
+                        <div class="cm-d-l-features">
+                            <div class="cm-d-l-feature-icon">
+                                <i class="fa-solid fa-envelope fa-lg"></i>
+                            </div>
+                            <div class="cm-d-l-feature-text">
+                                <h3 class="call-me">Email</h3>
+                                <p class="phone-number">example@example.com</p>
+                            </div>
+                        </div>
+                        <div class="cm-d-l-features">
+                            <div class="cm-d-l-feature-icon">
+                                <i class="fa-solid fa-location-pin fa-lg"></i>
+                            </div>
+                            <div class="cm-d-l-feature-text">
+                                <h3 class="call-me">Location</h3>
+                                <p class="phone-number">Cocody, Abidjan, Côte d'Ivoire</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cm-down-right">
+                        <form action="">
+                            <input type="text" class="form-ha" id="ha-name" name="name" placeholder="Name">
+                            <input type="text" class="form-ha" id="ha-email" name="email" placeholder="Email"><br>
+                            <input type="text" class="form-ha" id="ha-project" name="project" placeholder="Project"><br>
+                            <textarea type="text" class="form-ha" id="ha-message" name="message" placeholder="Message" cols="30" rows="10"></textarea>
+                            <!-- <input type="text" class="form-ha" id="ha-message" name="message" placeholder="   Message"> -->
+                            <button class="abt-btn-download">
+                                <a href="./assets/pdfs/resume.pdf" download="resume-MK">Send message</a>
+                                <i class="fa-regular fa-paper-plane"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+            </section>
+        </main>
     </div>
 
+    <footer class="project-footer">
+        <div class="pf-up">
+            <div class="ft-left">
+                <div class="ft-l-name">Mahadou</div>
+                <div class="ft-l-role">Geospatial Data Engineer</div>
+            </div>
+            <!-- <div class="ft-midle"></div> -->
+            <div class="ft-right">
+                <div class="hm-left-media media-footer">
+                    <p class="medias">
+                        <a href="https://www.linkedin.com/in/mamadou-krouma/">
+                            <i class="fa-brands fa-linkedin-in fa-lg"></i>
+                        </a>
+                    </p>
+                    <p class="medias">
+                        <a href="https://github.com/MKrouma">
+                            <i class="fa-brands fa-github fa-lg"></i>
+                        </a>
+                    </p>
+                    <p class="medias">
+                        <a href="https://www.spatialnode.net/mahadou">
+                            <i class="fa-regular fa-map fa-lg"></i>
+                        </a>  
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="pf-down">
+            <i class="fa-regular fa-copyright"></i>
+            <p>Designer by @mahadou. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
