--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                             </p>
                         </div>
                         <div>
-                            <button class="hm-btn-contact"><p>Contact Me</p><i class="fa-regular fa-paper-plane"></i></button>
+                            <button class="hm-btn-contact abt-btn-download">
+                                <a href="#contactme-hyperlink">Contact Me</a>
+                                <i class="fa-regular fa-paper-plane"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
