DOM integration - started

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="nav-features"><a href="#quali-hyperlink">Qualification</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
                 <div class="nav-features"><a href="#contactme-hyperlink">Contact me</a></div>
-                <div class="nav-feature"><i class="fa-regular fa-moon"></i></i></div>
+                <div class="nav-feature night-mode">
+                    <button class="btn-night-mode"><i class="fa-regular fa-moon"></i></button>
+                </div>
             </div>
         </header>
 
@@ -533,8 +535,10 @@
         </div>
         <div class="pf-down">
             <i class="fa-regular fa-copyright"></i>
-            <p>Designer by @mahadou. All rights reserved.</p>
+            <p>Design by @mahadou. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
