--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="nav-features"><a href="#quali-hyperlink">Qualification</a></div>
                 <div class="nav-features"><a href="">Portfolio</a></div>
                 <div class="nav-features"><a href="#contactme-hyperlink">Contact me</a></div>
-                <div class="nav-feature night-mode">
+                <div class="nav-feature night-mode" id="n-m-light">
                     <button class="btn-night-mode"><i class="fa-regular fa-moon"></i></button>
                 </div>
             </div>
