fixing some bugs - still have

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <header class="nav-bar">
+        <header class="nav-bar" id="navbar-hyperlink">
             <div class="nav-bar-left">
                 <div class="name">
                     <p>Mahadou</p>
@@ -19,7 +19,7 @@
             </div>
 
             <div class="nav-bar-right">
-                <div class="nav-features" id="home-init"><a href="">Home</a></div>
+                <div class="nav-features" id="home-init"><a href="#home-hyperlink">Home</a></div>
                 <div class="nav-features"><a href="#about-hyperlink">About</a></div>
                 <div class="nav-features"><a href="#skills-hyperlink">Skills</a></div>
                 <div class="nav-features"><a href="#quali-hyperlink">Qualification</a></div>
@@ -32,7 +32,7 @@
         </header>
 
         <main class="main">
-            <section class="home">
+            <section class="home" id="home-hyperlink">
                 <div class="home-left">
                     <div class="hm-left-media">
                         <p class="medias">
@@ -122,7 +122,7 @@
                             </div>
                             <div class="abtdr2-right">
                                 <div>
-                                    <a href=""><i class="fa-solid fa-arrow-up"></i></a>
+                                    <a href="#home-hyperlink"><i class="fa-solid fa-arrow-up"></i></a>
                                 </div>   
                             </div>
                         </div>
