Prod branch - S3 bucket

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahadou | Website</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c4c0df9b23.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -70,7 +70,7 @@
 
                 <div class="home-right">
                     <div class="hm-r-person-img">
-                        <img class="image1" src="assets/img/blob.svg" alt="blob">
+                        <img class="image1" src="blob.svg" alt="blob">
                         <!-- <img class="image2" src="assets/img/perfil.png" alt="perfil"> -->
                     </div>
                 </div>
@@ -95,7 +95,7 @@
 
                 <div class="about-down">
                     <div class="abt-down-left">
-                        <img src="assets/img/about-me-image.jpg" alt="about">
+                        <img src="about-me-image.jpg" alt="about">
                     </div>
                     <div class="abt-down-right">
                         <div class="abt-dr-1">
@@ -539,6 +539,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
