add style as S3 url

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahadou | Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://mkrouma-website.s3.eu-west-3.amazonaws.com/style.css">
     <script src="https://kit.fontawesome.com/c4c0df9b23.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="abt-dr-3">
                             <button class="abt-btn-download">
-                                <a href="./assets/pdfs/resume.pdf" download="resume-MK">Download CV</a>
+                                <a href="./resume.pdf" download="resume-MK">Download CV</a>
                                 <i class="fa-solid fa-download"></i>
                             </button>
                         </div>
