section padding - skills down & up

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 </div>
             </section>
 
-            <section class="about">
+            <section class="about" id="about-hyperlink">
                 <div class="about-up">
                     <div class="abt-up-title">
-                        <h2><a href="" id="about-hyperlink">About Me</a></h2>
+                        <h2><a href="" >About Me</a></h2>
                         <p>My introduction</p>
                     </div>
                 </div>
@@ -136,16 +136,16 @@
                 </div>
             </section>
 
-            <section class="skills">
+            <section class="skills" id="skills-hyperlink">
                 <div class="skills-up">
                     <div class="abt-up-title">
-                        <h2><a href="" id="skills-hyperlink">Skills</a></h2>
+                        <h2><a href="">Skills</a></h2>
                         <p>My technical level</p>
                     </div>
                 </div>
 
                 <div class="skills-down">
-                    <div class="sk-d-frames">
+                    <div class="sk-d-frames sk-groupe1" id="earthO-skills">
                         <div class="frames-title">
                             <div class="frames-title-icon">
                                 <i class="fa-solid fa-earth-africa fa-lg"></i></i>
@@ -211,7 +211,7 @@
                         </div>
                     </div>
 
-                    <div class="sk-d-frames">
+                    <div class="sk-d-frames sk-groupe1" id="dataS-skills">
                         <div class="frames-title">
                             <div class="frames-title-icon">
                                 <i class="fa-sharp fa-solid fa-database fa-lg"></i>
@@ -277,7 +277,7 @@
                         </div>
                     </div>
 
-                    <div class="sk-d-frames">
+                    <div class="sk-d-frames sk-groupe2" id="webD-skills">
                         <div class="frames-title">
                             <div class="frames-title-icon">
                                 <i class="fa-sharp fa-solid fa-code fa-lg"></i>
@@ -343,7 +343,7 @@
                         </div>
                     </div>
 
-                    <div class="sk-d-frames">
+                    <div class="sk-d-frames sk-groupe2" id="dataE-skills">
                         <div class="frames-title">
                             <div class="frames-title-icon">
                                 <i class="fa-sharp fa-solid fa-database fa-lg"></i>
@@ -411,8 +411,8 @@
                 </div>
             </section>
 
-            <section class="qualification">
-                <div class="quali-up" id="quali-hyperlink">
+            <section class="qualification" id="quali-hyperlink">
+                <div class="quali-up">
                     <div class="abt-up-title">
                         <h2><a href="">Qualification</a></h2>
                         <p>My education & works</p>
